--- a/src/index.css
+++ b/src/index.css
@@ -29,3 +29,9 @@ body {
 ::-webkit-scrollbar-thumb:hover {
   @apply bg-blue-800;
 }
+
+.error-message {
+  color: red;
+  margin-bottom: 1rem;
+  text-align: center;
+}
